# muView

./: .gitignore  Doxyfile  README.md  qmake2cmakeMain.sh
archive/kp/: CMakeLists.txt  FindTeem.cmake  calcEntropyVol.cpp  volume.h  whereIsTheData.txt
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/common_lib/: Makefile
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/data_lib/: Makefile
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/dfield_app/: Makefile
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/heart_app/: Makefile
build-uncertainty-Desktop_Qt_5_7_0_clang_64bit-Debug/muView_app/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/common_lib/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/data_lib/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/dfield_app/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/heart_app/: Makefile
build-uncertainty-Desktop_Qt_5_8_0_clang_64bit-Debug/muView_app/: Makefile
common/boost/: ref.hpp
common/fonts/: comic_sans_ms.font  courier_new.font  times.font
common/lapack-3.4.2/: Makefile
common/protobuf/: make_mac.txt
common/shogun-3.0.0/: CMakeLists.txt
common/zlib/: zlib.sln  zlib.vcproj  zlib.vcxproj
include/: BoundingRegion.h  DRL_Wrapper.h  DimensionalityReduction.h  DimensionalityReductionThreaded.h  Histogram2D.h  MainWidget.h  MainWindow.h  RemoteDimensionalityReduction.h  Shogun_Wrapper.h  volume.h
include/Dialog/: Connection.h  Dataset.cpp  MeshDialog.h  Metadata.cpp  Metadata.h
include/Drawable/: BarChart.h  ColorLine.h  DimRedDisplay.h  DrawableObject.h  MeshDisplay.h  PointDisplay.h  Provenance.h  ProvenanceNode.h  VolumeDisplay.h
include/Server/: DataServer.h  DataThread.h
include/muView/: ChartCloud.h  ChartRect.h  HeartDock.h  HeartMainWindow.h  HeartPointDisplay.h  Histogram.h  PCAView.h  PCAaxis.h  ParallelCoordinates.h  RenderEngine.h  RenderEngine2D.h  RenderEngine3D.h  VolumeRenderer.h  VoxelAssociativity.h
shaders/: vol.frag.glsl  vol.vert.glsl
src/: BoundingRegion.cpp  DRL_Wrapper.cpp  DimensionalityReduction.cpp  DimensionalityReductionThreaded.cpp  Histogram2D.cpp  MainWidget.cpp  MainWindow.cpp  RemoteDimensionalityReduction.cpp  Shogun_Wrapper.cpp  main.cpp
src/Dialog/: Dataset.h  MeshDialog.cpp  Metadata.cpp  Metadata.h
(+431 files in other folders)
